count no of 1s in String